2013-04-27  Julien Danjou  <julien@danjou.info>

	* sieve-manage.el (sieve-manage-authenticator-alist): Update the sieve
	port to "sieve" now that it has an official IANA port assigned.

2013-04-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mail-source.el (mail-source-fetch-pop, mail-source-check-pop):
	Don't set the MAILHOST environment variable permanently (Bug#14271).

2013-04-26  Glenn Morris  <rgm@gnu.org>

	* message.el (message-bury): Revert 2013-03-18 change.  (Bug#14117)

2013-04-25  Andrew Cohen  <cohen@bu.edu>

	* gnus-msg.el (gnus-inews-insert-gcc): Re-order conditional to work for
	string values of 'gcc-self. Thanks to Saroj Thirumalai.

2013-04-24  Andrew Cohen  <cohen@bu.edu>

	* nnir.el (nnir-close-group): Make sure we are in the right group.

	* gnus-sum.el (gnus-summary-insert-articles): Force updates to the
	dependency table from all newly retrieved headers.

2013-04-16  David Edmondson  <dme@dme.org>

	Support <img src="data:...">.

	* shr.el (shr-image-from-data): New function.
	(shr-tag-img): Use it.

2013-04-14  Andrew Cohen  <cohen@bu.edu>

	* nnir.el (nnir-request-set-mark): Make sure we are in the right
	group.

2013-04-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-msg.el (gnus-msg-mail): Make it avoid using posting styles
	corresponding to any existing group (Bug#14166).

2013-04-10  Andrew Cohen  <cohen@bu.edu>

	* nnir.el (number-sequence): No longer used.
	(nnir-request-set-mark): New function.
	(nnir-request-update-info): Improve marks updating.
	(nnir-request-scan): Don't duplicate marks updating.
	(gnus-group-make-nnir-group, nnir-run-imap, nnir-request-create-group):
	Use 'assq rather than 'assoc. Quote anonymous function.
	(nnir-request-group, nnir-close-group, gnus-summary-create-nnir-group):
	Use 'gnus-group-prefixed-p.
	(gnus-summary-create-nnir-group): Make sure server for method is open.

2013-04-04  Andrew Cohen  <cohen@bu.edu>

	* nnir.el (gnus-nnir-group-p): New function.
	(nnir-possibly-change-group): Use it.
