@@ -1,3 +1,8 @@
+2013-04-27  Glenn Morris  <rgm@gnu.org>
+
+	* gnus.el (gnus-list-debbugs):
+	Use require rather than autoload.  (Bug#14262)
+
 2013-04-27  Julien Danjou  <julien@danjou.info>
 
 	* sieve-manage.el (sieve-manage-authenticator-alist): Update the sieve
